force-app/main/default/objects/Account/fields/EMP_DATEV__BillingNumberTemplateRef__c.field-meta.xml
<CustomField>
    <fullName>EMP_DATEV__BillingNumberTemplateRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Value is mapped via Flow FL_InsertBillingNumberTemplateonBilling upon insert of Billings.</description>
    <inlineHelpText>Please state which Billing Number Template is relevant for this client.</inlineHelpText>
    <label>Billing Number Template</label>
    <referenceTo>EMP_DATEV__BillingNumberTemplate__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>