force-app/main/default/objects/Account/fields/EMP_DATEV__CustomerNumberTrig__c.field-meta.xml
<CustomField>
    <fullName>EMP_DATEV__CustomerNumberTrig__c</fullName>
    <description>This field should be automatically populated by the specific need for each use case a client might have. Alternatively, needs to be manually populated. Mapped in the Customer Export to Datev, as the Number per Customer.</description>
    <inlineHelpText>Unique Customer Account number needed for Datev export. Max 7 digits.</inlineHelpText>
    <label>Customer Number</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>