force-app/main/default/objects/Account/fields/EMP_DATEV__IsVATVerified__c.field-meta.xml
<CustomField>
    <fullName>EMP_DATEV__IsVATVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Account_Handler and VATVerifiedAuto__c.</description>
    <inlineHelpText>Checked if verified, Unchecked if not matched in database of VIES.</inlineHelpText>
    <label>VAT Verified?</label>
    <type>Checkbox</type>
</CustomField>