force-app/main/default/objects/Account/fields/EMP_DATEV__VATVerificationDetails__c.field-meta.xml
<CustomField>
    <fullName>EMP_DATEV__VATVerificationDetails__c</fullName>
    <inlineHelpText>Information of VIES about registered Company.</inlineHelpText>
    <label>VAT Verification Details</label>
    <type>TextArea</type>
</CustomField>