force-app/main/default/objects/Account/fields/EMP_DATEV__VATVerifiedAuto__c.field-meta.xml
<CustomField>
    <fullName>EMP_DATEV__VATVerifiedAuto__c</fullName>
    <description>Checks field IsVATVerified__c. If TRUE, show Green Resource, if FALSE, show Red Resource.</description>
    <formula>IF( EMP_DATEV__IsVATVerified__c,
IMAGE('/resource/1625060809000/EMP_DATEV__GreenCheckMark', 'Verified', 40, 40) ,
IMAGE('/resource/1625060809000/EMP_DATEV__RedCheckMark?', 'Not verified',40,40))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A green checkbox indicates that the VAT number has been successfully checked against the VIES database.</inlineHelpText>
    <label>VAT Verified?</label>
    <type>Text</type>
</CustomField>