force-app/main/default/objects/Account/fields/EMP_DATEV__VendorNumberTrig__c.field-meta.xml
<CustomField>
    <fullName>EMP_DATEV__VendorNumberTrig__c</fullName>
    <inlineHelpText>Unique Vendor Account number needed for Datev export. Populated automatically when Supplier Account is set to Active. Max 7 digits.</inlineHelpText>
    <label>Vendor Number</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>