force-app/main/default/objects/Account/fields/EMPAUAEndDate__c.field-meta.xml
<CustomField>
    <fullName>EMPAUAEndDate__c</fullName>
    <label>EMPAUA End Date</label>
    <type>Date</type>
</CustomField>