force-app/main/default/objects/Account/fields/EMPAUAEntityRef__c.field-meta.xml
<CustomField>
    <fullName>EMPAUAEntityRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMPAUA Entity</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>