force-app/main/default/objects/Account/fields/EMPAUASignerNDAAuto__c.field-meta.xml
<CustomField>
    <fullName>EMPAUASignerNDAAuto__c</fullName>
    <formula>EMPAUAEntityRef__r.OfficialSignerRef__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMPAUA Signer NDA</label>
    <type>Text</type>
</CustomField>