force-app/main/default/objects/Account/fields/EMPAUAStartDate__c.field-meta.xml
<CustomField>
    <fullName>EMPAUAStartDate__c</fullName>
    <label>EMPAUA Start Date</label>
    <type>Date</type>
</CustomField>