force-app/main/default/objects/Account/fields/FormstackFinanceRequestURL__c.field-meta.xml
<CustomField>
    <fullName>FormstackFinanceRequestURL__c</fullName>
    <inlineHelpText>Displays the form for financial information for the account.</inlineHelpText>
    <label>Formstack Finance Request URL</label>
    <type>Url</type>
</CustomField>