force-app/main/default/objects/Account/fields/Fundsizein__c.field-meta.xml
<CustomField>
    <fullName>Fundsizein__c</fullName>
    <label>Fund size (in £/€)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>