force-app/main/default/objects/Account/fields/GrossAnnualSalary__c.field-meta.xml
<CustomField>
    <fullName>GrossAnnualSalary__c</fullName>
    <label>Gross Annual Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>