force-app/main/default/objects/Account/fields/GrossMonthlySalaryAuto__c.field-meta.xml
<CustomField>
    <fullName>GrossMonthlySalaryAuto__c</fullName>
    <formula>GrossAnnualSalary__c / 12</formula>
    <label>Gross Monthly Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>