force-app/main/default/objects/Account/fields/HaveSF__c.field-meta.xml
<CustomField>
    <fullName>HaveSF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have SF?</label>
    <type>Checkbox</type>
</CustomField>