force-app/main/default/objects/Account/fields/IncludeVAT__c.field-meta.xml
<CustomField>
    <fullName>IncludeVAT__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Please check this, if you don´t want to have VAT included in the invoice.</inlineHelpText>
    <label>Include VAT</label>
    <type>Checkbox</type>
</CustomField>