force-app/main/default/objects/Account/fields/InternalInvoiceInformationFinance__c.field-meta.xml
<CustomField>
    <fullName>InternalInvoiceInformationFinance__c</fullName>
    <inlineHelpText>Internal information for our finance circle.</inlineHelpText>
    <label>Internal Invoice Information Finance</label>
    <type>TextArea</type>
</CustomField>