force-app/main/default/objects/Account/fields/Investmentsizes__c.field-meta.xml
<CustomField>
    <fullName>Investmentsizes__c</fullName>
    <description>Average investment size; can be a range.</description>
    <label>Investment sizes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>