force-app/main/default/objects/Account/fields/InvoiceContactRef__c.field-meta.xml
<CustomField>
    <fullName>InvoiceContactRef__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please choose the contact person of this Account who should receive the invoices.</inlineHelpText>
    <label>Invoice Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>