force-app/main/default/objects/Account/fields/InvoiceContactsCC__c.field-meta.xml
<CustomField>
    <fullName>InvoiceContactsCC__c</fullName>
    <description>Field to add multiple non-mandatory secondary invoice contacts</description>
    <inlineHelpText>CC email addresses of invoice recipients. Use comma to separate email addresses. Don&apos;t use additional spaces between comma and email addresses.</inlineHelpText>
    <label>Invoice Contacts CC</label>
    <type>TextArea</type>
</CustomField>