force-app/main/default/objects/Account/fields/InvoicesIn2ndAnd3rdReminder__c.field-meta.xml
<CustomField>
    <fullName>InvoicesIn2ndAnd3rdReminder__c</fullName>
    <description>Used to trigger the Traffic Lights on Accounts and Projects indicating the Payment Status</description>
    <label># Invoices in 2nd and 3rd Reminder</label>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Second reminder, Third reminder, Final Reminder, Escalated</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.AccountRef__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>