force-app/main/default/objects/Account/fields/InvoicesInFirstReminderAuto__c.field-meta.xml
<CustomField>
    <fullName>InvoicesInFirstReminderAuto__c</fullName>
    <description>Used to trigger the Traffic Lights on Accounts and Projects indicating the Payment Status</description>
    <label># Invoices in First Reminder</label>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>First reminder</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.AccountRef__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>