force-app/main/default/objects/Account/fields/IsAMContactDone__c.field-meta.xml
<CustomField>
    <fullName>IsAMContactDone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales check this if the AM &quot;Check-In&quot; was done</description>
    <inlineHelpText>Check this checkbox if you have done the AM &quot;check-in&quot; with the customer.</inlineHelpText>
    <label>AM Contact done</label>
    <type>Checkbox</type>
</CustomField>