force-app/main/default/objects/Account/fields/IsCanClearFieldsTrig__c.field-meta.xml
<CustomField>
    <fullName>IsCanClearFieldsTrig__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this checkbox if specific fields needs to be cleared with a null value. Used in Workflow.</description>
    <label>Clear Fields</label>
    <type>Checkbox</type>
</CustomField>