force-app/main/default/objects/Account/fields/IsCurrentUserActiveAuto__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUserActiveAuto__c</fullName>
    <formula>CurrentSalesforceUserRef__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Active?</label>
    <type>Checkbox</type>
</CustomField>