force-app/main/default/objects/Account/fields/isImmediatePayment__c.field-meta.xml
<CustomField>
    <fullName>isImmediatePayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Finance</description>
    <inlineHelpText>If client needs to pay their invoice upon receipt, please check this field and let Finance know</inlineHelpText>
    <label>Immediate Payment?</label>
    <type>Checkbox</type>
</CustomField>