force-app/main/default/objects/Account/fields/IsKeyAccount__c.field-meta.xml
<CustomField>
    <fullName>IsKeyAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this account an Key Account</description>
    <inlineHelpText>Check if this Customer is a key account.</inlineHelpText>
    <label>Is Key Account</label>
    <type>Checkbox</type>
</CustomField>