force-app/main/default/objects/Account/fields/IsKeyCustomerForSalesforce__c.field-meta.xml
<CustomField>
    <fullName>IsKeyCustomerForSalesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Customer for Salesforce</label>
    <type>Checkbox</type>
</CustomField>