force-app/main/default/objects/Account/fields/IsLogoImportant__c.field-meta.xml
<CustomField>
    <fullName>IsLogoImportant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logo Important?</label>
    <type>Checkbox</type>
</CustomField>