force-app/main/default/objects/Account/fields/isMovetoMS__c.field-meta.xml
<CustomField>
    <fullName>isMovetoMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to be deleted once exercise is complete - is there potential MS opportunity once the open project is closed</description>
    <inlineHelpText>to be deleted once exercise is complete - is there potential MS opportunity once the open project is closed</inlineHelpText>
    <label>Move to MS</label>
    <type>Checkbox</type>
</CustomField>