force-app/main/default/objects/Account/fields/isMSUpsell__c.field-meta.xml
<CustomField>
    <fullName>isMSUpsell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to be deleted once exercise is complete - can we upsell this account&apos;s MS</description>
    <inlineHelpText>to be deleted once exercise is complete - can we upsell this account&apos;s MS</inlineHelpText>
    <label>MS Upsell</label>
    <type>Checkbox</type>
</CustomField>