force-app/main/default/objects/Account/fields/IsReferenceCustomer__c.field-meta.xml
<CustomField>
    <fullName>IsReferenceCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Customer</label>
    <type>Checkbox</type>
</CustomField>