force-app/main/default/objects/Account/fields/IsReverseChargeAuto__c.field-meta.xml
<CustomField>
    <fullName>IsReverseChargeAuto__c</fullName>
    <formula>IF
(
BillingCountry != &apos;Germany&apos; 
&amp;&amp;
OR(
BillingCountry = &apos;Austria&apos;,
BillingCountry = &apos;Belgium&apos;,
BillingCountry = &apos;Bulgaria&apos;,
BillingCountry = &apos;Croatia&apos;,
BillingCountry = &apos;Cyprus&apos;,
BillingCountry = &apos;Czechia&apos;,
BillingCountry = &apos;Denmark&apos;,
BillingCountry = &apos;Estonia&apos;,
BillingCountry = &apos;Finland&apos;,
BillingCountry = &apos;France&apos;,
BillingCountry = &apos;Greece&apos;,
BillingCountry = &apos;Hungary&apos;,
BillingCountry = &apos;Ireland&apos;,
BillingCountry = &apos;Italy&apos;,
BillingCountry = &apos;Latvia&apos;,
BillingCountry = &apos;Lithuania&apos;,
BillingCountry = &apos;Luxembourg&apos;,
BillingCountry = &apos;Malta&apos;,
BillingCountry = &apos;Netherlands&apos;,
BillingCountry = &apos;Poland&apos;,
BillingCountry = &apos;Portugal&apos;,
BillingCountry = &apos;Romania&apos;,
BillingCountry = &apos;Slovakia&apos;,
BillingCountry = &apos;Slovenia&apos;,
BillingCountry = &apos;Spain&apos;,
BillingCountry = &apos;Sweden&apos;),
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Billing Country of the Account is within the EU, but not within Germany, this is automatically set to TRUE and Reverse Charge information is displayed on the billing PDFs.</inlineHelpText>
    <label>Reverse Charge?</label>
    <type>Checkbox</type>
</CustomField>