force-app/main/default/objects/Account/fields/IsSalesforceCustomer__c.field-meta.xml
<CustomField>
    <fullName>IsSalesforceCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Customer</label>
    <type>Checkbox</type>
</CustomField>