force-app/main/default/objects/Account/fields/IsTopAccount__c.field-meta.xml
<CustomField>
    <fullName>IsTopAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is a test field created for devops testing purposes #WDevOpsCenter</description>
    <label>Top Account</label>
    <type>Checkbox</type>
</CustomField>