force-app/main/default/objects/Account/fields/IsVATVerified__c.field-meta.xml
<CustomField>
    <fullName>IsVATVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if verified, Unchecked if not matched in database of VIES.</inlineHelpText>
    <label>VAT Verified?</label>
    <type>Checkbox</type>
</CustomField>