force-app/main/default/objects/Account/fields/LastActivityDateTrig__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDateTrig__c</fullName>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>