force-app/main/default/objects/Account/fields/LastCandidateConsentDate__c.field-meta.xml
<CustomField>
    <fullName>LastCandidateConsentDate__c</fullName>
    <defaultValue>IF( $RecordType.DeveloperName = &apos;PersonAccount&apos;, TODAY(),NULL)</defaultValue>
    <inlineHelpText>Shows the date, when the candidate last gave consent to store his / her data.</inlineHelpText>
    <label>Last Candidate Consent Date</label>
    <type>Date</type>
</CustomField>