force-app/main/default/objects/Account/fields/LinkedInProfile__c.field-meta.xml
<CustomField>
    <fullName>LinkedInProfile__c</fullName>
    <inlineHelpText>Write the url to the prospect&apos;s LinkedIn.</inlineHelpText>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>