force-app/main/default/objects/Account/fields/LostOpportunitiesAllOpportunitiesAuto__c.field-meta.xml
<CustomField>
    <fullName>LostOpportunitiesAllOpportunitiesAuto__c</fullName>
    <formula>IF(
 CountLostOpportunitiesAuto__c = 0, FALSE,
IF(
 CountOpportunitiesAuto__c =  CountLostOpportunitiesAuto__c , TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Opportunities = All Opportunities</label>
    <type>Checkbox</type>
</CustomField>