force-app/main/default/objects/Account/fields/MaintenanceTaskRayProjectId__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceTaskRayProjectId__c</fullName>
    <label>Maintenance TaskRay Project Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>