force-app/main/default/objects/Account/fields/MSASentOn__c.field-meta.xml
<CustomField>
    <fullName>MSASentOn__c</fullName>
    <label>MSA Sent On</label>
    <type>Date</type>
</CustomField>