force-app/main/default/objects/Account/fields/MSASignedOn__c.field-meta.xml
<CustomField>
    <fullName>MSASignedOn__c</fullName>
    <label>MSA Signed On</label>
    <type>Date</type>
</CustomField>