force-app/main/default/objects/Account/fields/NDACongaTemplateGroupAuto__c.field-meta.xml
<CustomField>
    <fullName>NDACongaTemplateGroupAuto__c</fullName>
    <description>Sets the Conga Template Category for NDA Templates based on EMPAUA Entity.</description>
    <formula>CASE( EMPAUAEntityRef__r.CompanyNameExternal__c ,
&apos;EMPAUA Ltd.&apos;,&apos;UK NDA Account&apos;,
&apos;EMPAUA GmbH&apos;,&apos;DE NDA Account&apos;,
&apos;EMPAUA GmbH (CH)&apos;,&apos;CH NDA Account&apos;,
&apos;&apos;
)</formula>
    <inlineHelpText>Sets the Conga Template Category for NDA Templates based on EMPAUA Entity.</inlineHelpText>
    <label>NDA Conga Template Group</label>
    <type>Text</type>
</CustomField>