force-app/main/default/objects/Account/fields/NDANameAuto__c.field-meta.xml
<CustomField>
    <fullName>NDANameAuto__c</fullName>
    <formula>CASE( CustomerSignerNDARef__r.PreferredLanguage__c , 
&apos;German&apos;,&apos;Geheimhaltungsvereinbarung zwischen &apos;&amp; Name &amp;&apos; EMPAUA&apos;,
&apos;Mutual NDA between &apos;&amp; Name &amp;&apos; EMPAUA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDA Name</label>
    <type>Text</type>
</CustomField>