force-app/main/default/objects/Account/fields/NDASentOnTrig__c.field-meta.xml
<CustomField>
    <fullName>NDASentOnTrig__c</fullName>
    <inlineHelpText>Automatically populated from Conga Composer (NDA Selected)</inlineHelpText>
    <label>NDA Sent On</label>
    <type>Date</type>
</CustomField>