force-app/main/default/objects/Account/fields/NDASignedOnText__c.field-meta.xml
<CustomField>
    <fullName>NDASignedOnText__c</fullName>
    <description>Technical field for Docusign Write Back.</description>
    <inlineHelpText>Technical field for Docusign Write Back.</inlineHelpText>
    <label>NDA Signed On Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>