force-app/main/default/objects/Account/fields/NDASignedOnTextAuto__c.field-meta.xml
<CustomField>
    <fullName>NDASignedOnTextAuto__c</fullName>
    <description>Docusign Write Back Conversion Field.</description>
    <formula>IF(
NDASignedOnText__c = &quot;&quot;,NULL,
DATE(
VALUE(RIGHT(NDASignedOnText__c,4)),
VALUE(MID( NDASignedOnText__c ,4,2)),
VALUE(LEFT(NDASignedOnText__c, 2))
)
)</formula>
    <inlineHelpText>Docusign Write Back Conversion Field.</inlineHelpText>
    <label>NDA Signed On Text Auto</label>
    <type>Date</type>
</CustomField>