force-app/main/default/objects/Account/fields/NDASignedOnTrig__c.field-meta.xml
<CustomField>
    <fullName>NDASignedOnTrig__c</fullName>
    <inlineHelpText>Automatically populated from Docusign when signature is received.</inlineHelpText>
    <label>NDA Signed On</label>
    <type>Date</type>
</CustomField>