force-app/main/default/objects/Account/fields/NetMonthlySalary__c.field-meta.xml
<CustomField>
    <fullName>NetMonthlySalary__c</fullName>
    <label>Net Monthly Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>