force-app/main/default/objects/Account/fields/NextAMContactTrig__c.field-meta.xml
<CustomField>
    <fullName>NextAMContactTrig__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Automated filled by a process.</description>
    <inlineHelpText>When is the next touch point with the customer planned?</inlineHelpText>
    <label>Next AM Contact</label>
    <type>Date</type>
</CustomField>