force-app/main/default/objects/Account/fields/NextCandidateConsentDue__c.field-meta.xml
<CustomField>
    <fullName>NextCandidateConsentDue__c</fullName>
    <inlineHelpText>Shows the date, when next candidate consent is due:
6 months after Last Candidate Consent Date, if candidate did not accept to be in candidate pool.
36 months Last Candidate Consent Date, if candidate accepted to be in candidate pool</inlineHelpText>
    <label>Next Candidate Consent Due</label>
    <type>Date</type>
</CustomField>