force-app/main/default/objects/Account/fields/NextProjectContactTrig__c.field-meta.xml
<CustomField>
    <fullName>NextProjectContactTrig__c</fullName>
    <description>Automated filled by a process.</description>
    <inlineHelpText>When is the next touch point with the customer planned reg. running projects?</inlineHelpText>
    <label>Next Project Contact</label>
    <type>Date</type>
</CustomField>