force-app/main/default/objects/Account/fields/Not_appropriate__c.field-meta.xml
<CustomField>
    <fullName>Not_appropriate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Size or business focus is not relevant yo EMPAUA business</description>
    <label>Not appropriate</label>
    <type>Checkbox</type>
</CustomField>