force-app/main/default/objects/Account/fields/Numberofemployees__c.field-meta.xml
<CustomField>
    <fullName>Numberofemployees__c</fullName>
    <label>Number of employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>