force-app/main/default/objects/Account/fields/Numberofportfolios__c.field-meta.xml
<CustomField>
    <fullName>Numberofportfolios__c</fullName>
    <description>Number of all companies within their portfolio</description>
    <label>Number of portfolios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>