force-app/main/default/objects/Account/fields/OperationsSummary__c.field-meta.xml
<CustomField>
    <fullName>OperationsSummary__c</fullName>
    <description>Notes from Operations perspective for consultants to bear in mind. This will show up on the case.</description>
    <inlineHelpText>Notes from Operations perspective for consultants to bear in mind. This will show up on the case.</inlineHelpText>
    <label>Operations Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>