force-app/main/default/objects/Account/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <inlineHelpText>Please select the payment method for the supplier.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEPA Direct Debit</fullName>
            </value>
            <value>
                <fullName>SEPA Remittance</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>