force-app/main/default/objects/Account/fields/PaymentStatusAuto__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatusAuto__c</fullName>
    <description>Used to indicate the the current Payment Status of an Account</description>
    <formula>IF(NOT(ISPICKVAL(Type,&apos;Customer&apos;)),&apos;&apos;,
IF(
    InvoicesIn2ndAnd3rdReminder__c &gt;0,IMAGE(&quot;/resource/1487585169000/RedTragfficLight&quot;, &quot;Red&quot;),
    IF( InvoicesInFirstReminderAuto__c &gt;0, 
                                          IMAGE(&quot;/resource/1487585191000/YellowTragfficLight&quot;, &quot;Yellow&quot;),
                                          IMAGE(&quot;/resource/1487585144000/GreenTrafficLight&quot;, &quot;Green&quot;)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Empty if not a current customer.
Green: No Invoices in Reminders
Yellow: At least 1 Invoice in &quot;First Reminder&quot;
Red: At least 1 Invoice after &quot;First Reminder&quot;</inlineHelpText>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>