force-app/main/default/objects/Account/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <defaultValue>14</defaultValue>
    <inlineHelpText>Period Allowed for payment in Calendar Days. For accounts that are not billed via Sage Financials (UK, CH &amp; ES accounts).</inlineHelpText>
    <label>Payment Terms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>