force-app/main/default/objects/Account/fields/PE_Industries__c.field-meta.xml
<CustomField>
    <fullName>PE_Industries__c</fullName>
    <label>PE Industries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Agribusiness</fullName>
            </value>
            <value>
                <fullName>Automobiles</fullName>
            </value>
            <value>
                <fullName>Biopolymers</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Bottling</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Business Support Services</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consumer Discretionary</fullName>
            </value>
            <value>
                <fullName>Consumer Products</fullName>
            </value>
            <value>
                <fullName>Consumer Services</fullName>
            </value>
            <value>
                <fullName>Cooling &amp; Ventilation Equipment and Services</fullName>
            </value>
            <value>
                <fullName>Defence</fullName>
            </value>
            <value>
                <fullName>Diversified</fullName>
            </value>
            <value>
                <fullName>Education/Training</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Energy Storage &amp; Batteries</fullName>
            </value>
            <value>
                <fullName>Environmental Services</fullName>
            </value>
            <value>
                <fullName>Financial &amp; Insurance Services</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Forestry &amp; Timber</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Healthcare IT</fullName>
            </value>
            <value>
                <fullName>Healthcare Specialists</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>