force-app/main/default/objects/Account/fields/PE_Strategies__c.field-meta.xml
<CustomField>
    <fullName>PE_Strategies__c</fullName>
    <label>PE Strategies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balanced</fullName>
            </value>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Co-Investment</fullName>
            </value>
            <value>
                <fullName>Co-Investment Multi-Manager</fullName>
            </value>
            <value>
                <fullName>Complex Situation</fullName>
            </value>
            <value>
                <fullName>Direct Secondaries</fullName>
            </value>
            <value>
                <fullName>Divestiture</fullName>
            </value>
            <value>
                <fullName>Early Stage</fullName>
            </value>
            <value>
                <fullName>Early Stage: Seed</fullName>
            </value>
            <value>
                <fullName>Early Stage: Start-up</fullName>
            </value>
            <value>
                <fullName>Expansion / Late Stage</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Hybrid Fund Of Funds</fullName>
            </value>
            <value>
                <fullName>Management Buy-in</fullName>
            </value>
            <value>
                <fullName>Management Buyout</fullName>
            </value>
            <value>
                <fullName>PIPE</fullName>
            </value>
            <value>
                <fullName>pre-IPO</fullName>
            </value>
            <value>
                <fullName>Public to Private</fullName>
            </value>
            <value>
                <fullName>Recapitalisation</fullName>
            </value>
            <value>
                <fullName>Reorganisation</fullName>
            </value>
            <value>
                <fullName>Restructuring</fullName>
            </value>
            <value>
                <fullName>Secondaries</fullName>
            </value>
            <value>
                <fullName>Spin-Offs</fullName>
            </value>
            <value>
                <fullName>Succession</fullName>
            </value>
            <value>
                <fullName>Turnaround</fullName>
            </value>
            <value>
                <fullName>Venture (General)</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
            <value>
                <fullName>Venture Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>